<resources>
    <string name="app_name">CryptoApp</string>
    <string name="symbols">%s / %s</string>
    <string name="last_update">Последнее обновление: %s</string>
    <string name="price_label">Цена:</string>
    <string name="max_price_label">Максимум за день:</string>
    <string name="min_price_label">Минимум за день:</string>
    <string name="last_market_label">Последняя сделка:</string>
    <string name="last_updated_label">Обновлено:</string>
</resources>